--- a/action.yml
+++ b/action.yml
@@ -47,7 +47,7 @@ runs:
     #         INPUT_WORKSPACE_DIR: ${{ inputs.workspace-dir }}
 
     - name: Generate reference files 
-      uses: docker://020229604682.dkr.ecr.us-east-1.amazonaws.com/actions/assets-plugin-chain-utils:3b5ef805fbffad1cbc96feac47518fcf13153bf9
+      uses: docker://public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:af06a82fdad168c42e8d06eaa2008d40a8408835
       with:
           entrypoint: assets-plugin-chain-utils
           args: generate-references --asset-type "CODE"
@@ -57,14 +57,14 @@ runs:
           INPUT_RUN_ID: ${{ inputs.run_id }}
           INPUT_IS_GITHUB_WORKFLOW: ${{ inputs.is-github-workflow }}
     - name: Run gitleaks compliance plugin
-      uses: docker://020229604682.dkr.ecr.us-east-1.amazonaws.com/actions/assets-gitleaks-scanner:latest
+      uses: docker://public.ecr.aws/l7o7z1g8/actions/assets-gitleaks-scanner:ff0ca194ecb33e2eb6c5ba18c9b9a6ca905c4af0
       env:
           RUN_ID: ${{ inputs.run_id }}
           JOB_ID: ${{ inputs.job_id }}
           STEP_ID: ${{ inputs.step_id }}
       run: /app/plugin-gitleaks-scanner -mode single
     - name: Complete execution plan
-      uses: docker://020229604682.dkr.ecr.us-east-1.amazonaws.com/actions/assets-plugin-chain-utils:3b5ef805fbffad1cbc96feac47518fcf13153bf9
+      uses: docker://public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:af06a82fdad168c42e8d06eaa2008d40a8408835
       id: process-outputs
       with:
           entrypoint: assets-plugin-chain-utils
