--- a/action.yml
+++ b/action.yml
@@ -33,7 +33,7 @@ runs:
           -e INPUT_RUN_ID="${{ inputs.run_id }}" \
           -e INPUT_IS_GITHUB_WORKFLOW="${{ inputs.is-github-workflow }}" \
           public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:af06a82fdad168c42e8d06eaa2008d40a8408835 \
-          assets-plugin-chain-utils generate-references --asset-type "CODE"
+          generate-references --asset-type "CODE"
 
     - name: Run gitleaks compliance plugin
       shell: bash
@@ -54,4 +54,4 @@ runs:
           -e INPUT_RUN_ID="${{ inputs.run_id }}" \
           -e INPUT_IS_GITHUB_WORKFLOW="${{ inputs.is-github-workflow }}" \
           public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:af06a82fdad168c42e8d06eaa2008d40a8408835 \
-          assets-plugin-chain-utils process-outputs
+          process-outputs
