--- a/action.yml
+++ b/action.yml
@@ -31,15 +31,15 @@ runs:
         docker run --rm \
           -e INPUT_CLOUDBEES_API_TOKEN="${{ inputs.cloudbees_pat_token }}" \
           -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees_api_url }}" \
-          -e INPUT_RUN_ID="${{ inputs.run_id }}" \
+          -e INPUT_RUN_ID="14377182881" \
           -e INPUT_IS_GITHUB_WORKFLOW="${{ inputs.is-github-workflow }}" \
-          -e GITHUB_RUN_ID="${{ github.run_id }}" \
-          -e GITHUB_WORKFLOW_REF="${{ github.workflow_ref }}" \
-          -e GITHUB_RUN_ATTEMPT="${{ github.run_attempt }}" \
-          -e GITHUB_RUN_NUMBER="${{ github.run_number }}" \
-          -e GITHUB_REF_NAME="${{ github.ref_name }}" \
-          -e GITHUB_REPOSITORY="${{ github.repository }}" \
-          -e GITHUB_SERVER_URL="${{ github.server_url }}/${{ github.repository }}" \
+          -e GITHUB_RUN_ID="14377182881" \
+          -e GITHUB_WORKFLOW_REF="hjs-testing/gha-deeper-integration-testing/.github/workflows/test-results.yml@refs/heads/main" \
+          -e GITHUB_RUN_ATTEMPT="1" \
+          -e GITHUB_RUN_NUMBER="17" \
+          -e GITHUB_REF_NAME="gha-deeper-integration-testing" \
+          -e GITHUB_REPOSITORY="hjs-testing/gha-deeper-integration-testing" \
+          -e GITHUB_SERVER_URL="https://github.com/hjs-testing/gha-deeper-integration-testing" \
           -e GITHUB_JOB="${{ github.job }}" \
           -e GITHUB_PROVIDER="GITHUB" \
           -e GITHUB_WORKSPACE="${{ github.workspace }}" \
