--- a/action.yml
+++ b/action.yml
@@ -43,7 +43,7 @@ runs:
           -e GITHUB_SERVER_URL="https://github.com/hjs-testing/gha-deeper-integration-testing" \
           -e GITHUB_JOB="${{ github.job }}" \
           -e GITHUB_PROVIDER="GITHUB" \
-          -e GITHUB_WORKSPACE="${{ github.workspace }}" \
+          -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
           public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:af06a82fdad168c42e8d06eaa2008d40a8408835 \
           generate-references --asset-type "CODE"
 
