--- a/action.yml
+++ b/action.yml
@@ -56,7 +56,7 @@ runs:
           -e JOB_ID="${{ inputs.job_id }}" \
           -e STEP_ID="${{ inputs.step_id }}" \
           public.ecr.aws/l7o7z1g8/actions/assets-gitleaks-scanner:ff0ca194ecb33e2eb6c5ba18c9b9a6ca905c4af0 \
-          /app/plugin-gitleaks-scanner -mode single
+          /app/plugin-gitleaks-scanner --mode single
 
     - name: Complete execution plan
       shell: bash
