--- a/action.yml
+++ b/action.yml
@@ -56,7 +56,7 @@ runs:
           -e JOB_ID="${{ inputs.job_id }}" \
           -e STEP_ID="${{ inputs.step_id }}" \
           public.ecr.aws/l7o7z1g8/actions/assets-gitleaks-scanner:3622ab1201a4a9b9692f24407a363334a6b08fa9 \
-          -- -mode single
+          --mode single
 
     - name: Complete execution plan
       shell: bash
