--- a/action.yml
+++ b/action.yml
@@ -67,5 +67,14 @@ runs:
           -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees_api_url }}" \
           -e INPUT_RUN_ID="${{ inputs.run_id }}" \
           -e INPUT_IS_GITHUB_WORKFLOW="${{ inputs.is-github-workflow }}" \
+          -e GITHUB_WORKFLOW_REF="hjs-testing/gha-deeper-integration-testing/.github/workflows/test-results.yml@refs/heads/main" \
+          -e GITHUB_RUN_ATTEMPT="1" \
+          -e GITHUB_RUN_NUMBER="17" \
+          -e GITHUB_REF_NAME="gha-deeper-integration-testing" \
+          -e GITHUB_REPOSITORY="hjs-testing/gha-deeper-integration-testing" \
+          -e GITHUB_SERVER_URL="https://github.com/hjs-testing/gha-deeper-integration-testing" \
+          -e GITHUB_JOB="${{ github.job }}" \
+          -e GITHUB_PROVIDER="GITHUB" \
+          -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
           public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:0987702cf0f32ab42040f4ed6f852a6cfe4b21d0 \
           process-outputs
