checking for output json

--- a/action.yml
+++ b/action.yml
@@ -87,3 +87,11 @@ runs:
           -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
           public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:0987702cf0f32ab42040f4ed6f852a6cfe4b21d0 \
           process-outputs
+
+    - name: List files under store in workspace
+      shell: bash
+      run: |
+        echo "Current working directory: $(pwd)"
+        echo "Contents of workspace:"
+        ls -laR $GITHUB_WORKSPACE/store
+
