--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,22 @@ inputs:
 runs:
   using: "composite"
   steps:
+
+    - name: Get commit or ref info
+      shell: bash
+      run: |
+        docker run --rm \
+         -v $GITHUB_WORKSPACE:$GITHUB_WORKSPACE \
+         -e INPUT_CLOUDBEES_API_TOKEN="${{ inputs.cloudbees_pat_token }}" \
+         -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees_api_url }}" \
+         -e INPUT_IS_GITHUB_WORKFLOW="${{ inputs.is-github-workflow }}" \
+         -e INPUT_RUN_ID="14377182881" \
+         -e GITHUB_REF="${{ github.ref_name }}" \
+         -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
+         -e GITHUB_ENV="$GITHUB_ENV" \
+         public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:05a491580f77c8df5fb2f8b2176c4cbcc0bd37fd \
+         get-commit-info
+         
   
     - name: Generate reference files 
       shell: bash
@@ -45,7 +61,7 @@ runs:
           -e GITHUB_PROVIDER="GITHUB" \
           -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
           -e GITHUB_ENV="$GITHUB_ENV" \
-          public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:319c16869790d0d394ac6905d283209512b422b0 \
+          public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:05a491580f77c8df5fb2f8b2176c4cbcc0bd37fd \
           generate-references --asset-type "CODE"
 
     # - name: List files in workspace
@@ -86,6 +102,6 @@ runs:
           -e GITHUB_JOB="${{ github.job }}" \
           -e GITHUB_PROVIDER="GITHUB" \
           -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
-          public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:319c16869790d0d394ac6905d283209512b422b0 \
+          public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:05a491580f77c8df5fb2f8b2176c4cbcc0bd37fd \
           process-outputs
 
