--- a/action.yml
+++ b/action.yml
@@ -47,15 +47,15 @@ runs:
           -v $GITHUB_WORKSPACE:$GITHUB_WORKSPACE \
           -e INPUT_CLOUDBEES_API_TOKEN="${{ inputs.cloudbees_pat_token }}" \
           -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees_api_url }}" \
-          -e INPUT_RUN_ID="14377182881" \
+          -e INPUT_RUN_ID="14636561480" \
           -e INPUT_IS_GITHUB_WORKFLOW="${{ inputs.is-github-workflow }}" \
-          -e GITHUB_RUN_ID="14377182881" \
-          -e GITHUB_WORKFLOW_REF="hjs-testing/gha-deeper-integration-testing/.github/workflows/test-results.yml@refs/heads/main" \
+          -e GITHUB_RUN_ID="14636561480" \
+          -e GITHUB_WORKFLOW_REF="AmitRamachandrann/cafe/.github/workflows/gitleaks_gha.yaml@refs/heads/demo-gha" \
           -e GITHUB_RUN_ATTEMPT="1" \
-          -e GITHUB_RUN_NUMBER="17" \
-          -e GITHUB_REF_NAME="gha-deeper-integration-testing" \
-          -e GITHUB_REPOSITORY="hjs-testing/gha-deeper-integration-testing" \
-          -e GITHUB_SERVER_URL="https://github.com/hjs-testing/gha-deeper-integration-testing" \
+          -e GITHUB_RUN_NUMBER="6" \
+          -e GITHUB_REF_NAME="demo-gha" \
+          -e GITHUB_REPOSITORY="AmitRamachandrann/cafe" \
+          -e GITHUB_SERVER_URL="https://github.com/AmitRamachandrann/cafe" \
           -e GITHUB_JOB="${{ github.job }}" \
           -e GITHUB_PROVIDER="GITHUB" \
           -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
@@ -89,18 +89,19 @@ runs:
           -v $GITHUB_WORKSPACE:$GITHUB_WORKSPACE \
           -e INPUT_CLOUDBEES_API_TOKEN="${{ inputs.cloudbees_pat_token }}" \
           -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees_api_url }}" \
-          -e INPUT_RUN_ID="${{ inputs.run_id }}" \
-          -e GITHUB_RUN_ID="14377182881" \
+          -e INPUT_RUN_ID="14636561480" \
           -e INPUT_IS_GITHUB_WORKFLOW="${{ inputs.is-github-workflow }}" \
-          -e GITHUB_WORKFLOW_REF="hjs-testing/gha-deeper-integration-testing/.github/workflows/test-results.yml@refs/heads/main" \
+          -e GITHUB_RUN_ID="14636561480" \
+          -e GITHUB_WORKFLOW_REF="AmitRamachandrann/cafe/.github/workflows/gitleaks_gha.yaml@refs/heads/demo-gha" \
           -e GITHUB_RUN_ATTEMPT="1" \
-          -e GITHUB_RUN_NUMBER="17" \
-          -e GITHUB_REF_NAME="gha-deeper-integration-testing" \
-          -e GITHUB_REPOSITORY="hjs-testing/gha-deeper-integration-testing" \
-          -e GITHUB_SERVER_URL="https://github.com/hjs-testing/gha-deeper-integration-testing" \
+          -e GITHUB_RUN_NUMBER="6" \
+          -e GITHUB_REF_NAME="demo-gha" \
+          -e GITHUB_REPOSITORY="AmitRamachandrann/cafe" \
+          -e GITHUB_SERVER_URL="https://github.com/AmitRamachandrann/cafe" \
           -e GITHUB_JOB="${{ github.job }}" \
           -e GITHUB_PROVIDER="GITHUB" \
           -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
+          -e GITHUB_ENV="$GITHUB_ENV" \
           public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:05a491580f77c8df5fb2f8b2176c4cbcc0bd37fd \
           process-outputs
 
