--- a/action.yml
+++ b/action.yml
@@ -80,9 +80,9 @@ runs:
       shell: bash
       run: |
         docker run --rm \
+          --user $(id -u):$(id -g) \
           -v $GITHUB_WORKSPACE:$GITHUB_WORKSPACE \
           -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
-          --user "$(id -u):$(id -g)" \
           -e RUN_ID="${{ inputs.run_id }}" \
           -e JOB_ID="${{ inputs.job_id }}" \
           -e STEP_ID="${{ inputs.step_id }}" \
