using root user to check if files gets created

--- a/action.yml
+++ b/action.yml
@@ -44,6 +44,7 @@ runs:
       shell: bash
       run: |
         docker run --rm \
+          -u root \
           -v $GITHUB_WORKSPACE:$GITHUB_WORKSPACE \
           -e INPUT_CLOUDBEES_API_TOKEN="${{ inputs.cloudbees_pat_token }}" \
           -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees_api_url }}" \
