--- a/action.yml
+++ b/action.yml
@@ -39,6 +39,14 @@ runs:
     #      -e GITHUB_ENV="$GITHUB_ENV" \
     #      public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:05a491580f77c8df5fb2f8b2176c4cbcc0bd37fd \
     #      get-commit-info
+
+    - name: Create request JSON file in workspace
+      shell: bash
+      run: |
+        FILE_PATH="$GITHUB_WORKSPACE/store/request/request.json"
+        mkdir -p "$(dirname "$FILE_PATH")"
+        touch "$FILE_PATH"
+        echo "File created at: $FILE_PATH"
          
     - name: Generate reference files 
       shell: bash
