--- a/action.yml
+++ b/action.yml
@@ -40,6 +40,12 @@ runs:
     #      public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:05a491580f77c8df5fb2f8b2176c4cbcc0bd37fd \
     #      get-commit-info
 
+          
+    - name: Create tar of source code
+        run: |
+          tar -cvf output.tar .
+          tar -tf output.tar
+
     - name: Create request JSON file in workspace
       shell: bash
       run: |
