--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,20 @@ inputs:
 runs:
   using: "composite"
   steps:
+
+    - name: Create tar of source code
+      shell: bash
+      run: |
+        tar -cvf output.tar .
+        tar -tf output.tar
+
+    - name: Create request JSON file in workspace
+      shell: bash
+      run: |
+        FILE_PATH="$GITHUB_WORKSPACE/store/request/request.json"
+        mkdir -p "$(dirname "$FILE_PATH")"
+        touch "$FILE_PATH"
+        echo "File created at: $FILE_PATH"
   
     - name: Generate reference files 
       shell: bash
@@ -31,7 +45,7 @@ runs:
         docker run --rm \
           -e INPUT_CLOUDBEES_API_TOKEN="${{ inputs.cloudbees_pat_token }}" \
           -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees_api_url }}" \
-          -e INPUT_RUN_ID="${{ inputs.run_id }}" \
+          -e INPUT_RUN_ID="${{ github.run_id }}" \
           -e INPUT_IS_GITHUB_WORKFLOW="${{ inputs.is-github-workflow }}" \
           -e GITHUB_RUN_ID="${{ github.run_id }}" \
           -e GITHUB_WORKFLOW_REF="${{ github.workflow_ref }}" \
