--- a/action.yml
+++ b/action.yml
@@ -47,6 +47,7 @@ runs:
       shell: bash
       run: |
         docker run --rm \
+          -v $GITHUB_WORKSPACE:$GITHUB_WORKSPACE \
           -e INPUT_CLOUDBEES_API_TOKEN="${{ inputs.cloudbees_pat_token }}" \
           -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees_api_url }}" \
           -e INPUT_RUN_ID="${{ github.run_id }}" \
