--- a/action.yml
+++ b/action.yml
@@ -2,12 +2,13 @@ name: gitleaks-hybrid
 description: Run gitleaks compliance scan with CloudBees hybrid integration
 
 inputs:
-  cloudbees_pat_token: 
+  cloudbees-pat: 
     description: Cloudbees PAT token of User
     required: true
-  cloudbees_api_url: 
+  cloudbees-url: 
     description: Cloudbees API URL
-    required: true
+    required: false
+    default: 'https://api.cloudbees.com'
   run_id: 
     description: GHA Run ID
     required: false
@@ -23,7 +24,7 @@ inputs:
   is-github-workflow:
     description: Flag to indicate if the action is running in GitHub workflow
     required: false
-    default: true
+    default: "true"
 
 runs:
   using: "composite"
@@ -46,8 +47,8 @@ runs:
       run: |
         docker run --rm \
           -v $GITHUB_WORKSPACE:$GITHUB_WORKSPACE \
-          -e INPUT_CLOUDBEES_API_TOKEN="${{ inputs.cloudbees_pat_token }}" \
-          -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees_api_url }}" \
+          -e INPUT_CLOUDBEES_API_TOKEN="${{ inputs.cloudbees-pat }}" \
+          -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees-url }}" \
           -e INPUT_RUN_ID="${{ github.run_id }}" \
           -e INPUT_IS_GITHUB_WORKFLOW="${{ inputs.is-github-workflow }}" \
           -e GITHUB_RUN_ID="${{ github.run_id }}" \
@@ -82,8 +83,8 @@ runs:
       run: |
        docker run --rm \
           -v $GITHUB_WORKSPACE:$GITHUB_WORKSPACE \
-          -e INPUT_CLOUDBEES_API_TOKEN="${{ inputs.cloudbees_pat_token }}" \
-          -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees_api_url }}" \
+          -e INPUT_CLOUDBEES_API_TOKEN="${{ inputs.cloudbees-pat }}" \
+          -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees-url }}" \
           -e INPUT_RUN_ID="${{ github.run_id }}" \
           -e INPUT_IS_GITHUB_WORKFLOW="${{ inputs.is-github-workflow }}" \
           -e GITHUB_RUN_ID="${{ github.run_id }}" \
