--- a/action.yml
+++ b/action.yml
@@ -72,8 +72,8 @@ runs:
           -u root \
           -v $GITHUB_WORKSPACE:$GITHUB_WORKSPACE \
           -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
-          -e RUN_ID="${{ inputs.run_id }}" \
-          -e JOB_ID="${{ inputs.job_id }}" \
+          -e RUN_ID="${{ github.run_id }}" \
+          -e JOB_ID="${{ github.job }}" \
           -e STEP_ID="${{ inputs.step_id }}" \
           public.ecr.aws/l7o7z1g8/actions/assets-gitleaks-scanner:3622ab1201a4a9b9692f24407a363334a6b08fa9 \
           --mode single
