--- a/action.yml
+++ b/action.yml
@@ -31,6 +31,7 @@ runs:
       shell: bash
       run: |
         docker run --rm \
+        docker run --rm \
           -v $GITHUB_WORKSPACE:$GITHUB_WORKSPACE \
           -e INPUT_CLOUDBEES_API_URL="${{ inputs.cloudbees-url }}" \
           -e INPUT_RUN_ID="${{ github.run_id }}" \
@@ -44,8 +45,7 @@ runs:
           -e GITHUB_SERVER_URL="${{ github.server_url }}/${{ github.repository }}" \
           -e GITHUB_JOB="${{ github.job }}" \
           -e GITHUB_PROVIDER="GITHUB" \
-          -e GITHUB_WORKSPACE="${{ github.workspace }}" \
-          -e GITHUB_ENV="$GITHUB_ENV" \
+          -e GITHUB_WORKSPACE="$GITHUB_WORKSPACE" \
           -e ACTIONS_ID_TOKEN_REQUEST_TOKEN=$ACTIONS_ID_TOKEN_REQUEST_TOKEN \
           -e ACTIONS_ID_TOKEN_REQUEST_URL=$ACTIONS_ID_TOKEN_REQUEST_URL \
           public.ecr.aws/l7o7z1g8/actions/assets-plugin-chain-utils:f725443f3373e3939a1e0258f994fe6a46cf76dc \
